<resources>
    <string name="app_name">Contacts</string>
    <string name="Text">Контакты</string>
    <string name="name">name</string>
    <string name="address">address</string>
    <string name="telephone_number">telephoneNumber</string>
    <string name="second_telephone_number">second_telephone_number</string>
    <string name="first_email">firstEmail</string>
    <string name="second_email">second_email</string>
    <string name="description">description</string>
    <string name="day_of_birth">DayOfBirth</string>
    <string name="birthday_reminder_on">Выключить напоминание</string>
    <string name="birthday_reminder_off">Включить напоминание</string>
    <string name="title_notification">Напоминание о дне рождения</string>
    <string name="text_notification">сегодня празднует день рождения</string>
    <string name="deny_permission_message">Пожалуйста предоставте разрешение на чтение контактов</string>
    <string name="google_maps_key">google_key</string>
    <string name="yandex_maps_key">yandex_key</string>
    <string name="title_toolbar_contact_details">Детали контактов</string>
    <string name="tittle_toolbar_contact_list">Список контактов</string>
    <string name="title_toolbar_map">Местоположение</string>
    <string name="tittle_menu">Поиск по контактам</string>
    <string name="status_btn_location_add">Добавить адрес на карте</string>
    <string name="status_btn_location_check">Посмотреть местоположение на карте</string>
    <string name="no_route_message">Не существует наземного маршрута</string>
    <string name="contact_photo">Фотография контакта</string>
    <string name="map">Map</string>
</resources>
